Adding core utility functions

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,6 +4,12 @@ export("%$%")
 export("%<>%")
 export("%>%")
 export("%T>%")
+export(al1_arg_max)
+export(al1_arg_min)
+export(al1_group_neut)
+export(al1_rank)
+export(al1_roll_rank)
+export(al1_scale)
 export(alpha1)
 export(alpha10)
 export(alpha100)
@@ -106,6 +112,7 @@ export(alpha97)
 export(alpha98)
 export(alpha99)
 export(alpha_common_parameters)
+export(alpha_run)
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
