Adding data functions

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -113,6 +113,9 @@ export(alpha98)
 export(alpha99)
 export(alpha_common_parameters)
 export(alpha_run)
+export(sym_data_tidy)
+export(syms_data_get)
+export(syms_data_xts)
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
