faster running whichmax and whicmin implementations based on base::max.col

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,12 +4,12 @@ export("%$%")
 export("%<>%")
 export("%>%")
 export("%T>%")
-export(al1_arg_max)
-export(al1_arg_min)
 export(al1_group_neut)
 export(al1_rank)
 export(al1_roll_rank)
 export(al1_scale)
+export(al1_whichmax)
+export(al1_whichmin)
 export(alpha1)
 export(alpha10)
 export(alpha100)
